syntax = "proto3";

option go_package = "proto";

service CacheRpcServer {
    rpc Take(TakeRequest) returns (TakeReply) {}
    rpc Return(ReturnRequest) returns (ReturnReply) {}
    rpc Persist(PersistRequest) returns (PersistReply) {}
}

message TakeRequest {
    string playerId = 1;
}

message TakeReply {
    string data = 1;
}

message ReturnRequest {
    string playerId = 1;
    string data = 2;
    int64 version = 3;
}

message ReturnReply {
    bool success = 1;
}

message PersistRequest {
    string playerId = 1;
    string data = 2;
    int64 version = 3;
}

message PersistReply {
    bool success = 1;
}
